# TalkMetaAI

./: .gitignore  Dockerfile  HUGGINGFACE_SPACES.md  HUGGINGFACE_ZERO_DEPLOY_GUIDE.md  README.md  package.json  run_unified_setup.ps1
apps/client/: next.config.ts
apps/client/src/app/: page.tsx
apps/client/src/components/: AvatarSelector.tsx  AvatarViewer.tsx  CameraStream.tsx  TalkingHead.tsx
apps/client/src/contexts/: WebSocketContext.tsx
apps/server/: main.py  main_part_1.py  main_part_2.py  main_part_3.py  main_part_4.py  package.json  pyproject.toml
